samples/_failures_safe/1761727640_e72928_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15151bfe.c: In function ‘main’:
./samples/SAFE/__tmp_15151bfe.c:165:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  165 |     int start_node
      |     ^~~
./samples/SAFE/__tmp_15151bfe.c:165:5: error: expected declaration or statement at end of input
